# predictors

./: .gitignore  README.md  ReadMe.md  classifiers.py  data.py  export_LaMa_to_onnx.ipynb  finetune.py  finetune_copy.py  finetune_unsloth.py  logger.py  main.py  openai_models.py  predictors.py  pyproject.toml  requirements.txt  setup.py  tasks.py  test_openai.py
predictors/: finetune_local.py  finetune_modal.py  predictors.py  requirements.txt  train_config.py
predictors/prompts/: classification_jit_labels.jinja  classification_labels.jinja  tasks_description.jinja  tasks_one_shot.jinja
prompts/: classification_finetune.jinja  classification_labels.jinja  classification_task.jinja  classification_task_few_shot.jinja  tasks_few_shot.jinja
